Support "invalid" marker for applications (#362)